test/library/standard/Random/stonea/fillRandomAssociative.good
$CHPL_HOME/modules/standard/Random.chpl:128: In function 'fillRandom':
$CHPL_HOME/modules/standard/Random.chpl:135: error: fillRandom does not support non-rectangular arrays
  fillRandomAssociative.chpl:5: called as fillRandom(arr: [DefaultAssociativeDom(int(64),true)] real(64), seed: int(64), param algorithm = 1: RNG)
